<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">Unknown</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="fingerprint_icon_content_description">Fingerprint icon</string>
    <string name="paste_as_plain_text">Paste as plain text</string>
    <string name="autofill">Autofill</string>
    <string name="BaMmi">Call barring</string>
    <string name="CLIRDefaultOffNextCallOff">Caller ID defaults to not restricted. Next call: Not restricted</string>
    <string name="CLIRDefaultOffNextCallOn">Caller ID defaults to not restricted. Next call: Restricted</string>
    <string name="CLIRDefaultOnNextCallOff">Caller ID defaults to restricted. Next call: Not restricted</string>
    <string name="CLIRDefaultOnNextCallOn">Caller ID defaults to restricted. Next call: Restricted</string>
    <string name="CLIRPermanent">"You can't change the caller ID setting."</string>
    <string name="CfMmi">Call forwarding</string>
    <string name="ClipMmi">Incoming Caller ID</string>
    <string name="ClirMmi">Outgoing Caller ID</string>
    <string name="CndMmi">Calling number delivery</string>
    <string name="CnipMmi">Calling number present</string>
    <string name="CnirMmi">Calling number restricted</string>
    <string name="ColpMmi">Connected Line ID</string>
    <string name="ColrMmi">Connected Line ID Restriction</string>
    <string name="CwMmi">Call waiting</string>
    <string name="DndMmi">Do not disturb</string>
    <string name="EmergencyCallWarningSummary">Can’t make emergency calls over Wi‑Fi</string>
    <string name="EmergencyCallWarningTitle">Emergency calling unavailable</string>
    <string name="Midnight">Midnight</string>
    <string name="NetworkPreferenceSwitchSummary">Try changing preferred network. Tap to change.</string>
    <string name="NetworkPreferenceSwitchTitle">Can’t reach mobile network</string>
    <string name="Noon">Noon</string>
    <string name="PinMmi">PIN change</string>
    <string name="PwdMmi">Password change</string>
    <string name="RestrictedOnAllVoiceTitle">No voice service or emergency calling</string>
    <string name="RestrictedOnDataTitle">No mobile data service</string>
    <string name="RestrictedOnEmergencyTitle">Emergency calling unavailable</string>
    <string name="RestrictedOnNormalTitle">No voice service</string>
    <string name="RestrictedStateContent">Temporarily turned off by your carrier</string>
    <string name="RestrictedStateContentMsimTemplate">Temporarily turned off by your carrier for SIM %d</string>
    <string name="RuacMmi">Rejection of undesired annoying calls</string>
    <string name="SetupCallDefault">Accept call?</string>
    <string name="ThreeWCMmi">Three way calling</string>
    <string name="accept">Accept</string>
    <string name="accessibility_binding_label">Accessibility</string>
    <string name="accessibility_button_instructional_text">To change features, touch &amp; hold the Accessibility button.</string>
    <string name="accessibility_button_prompt_text">Choose a feature to use when you tap the Accessibility button:</string>
    <string name="accessibility_magnification_chooser_text">Magnification</string>
    <string name="accessibility_shortcut_disabling_service">Accessibility Shortcut turned %1$s off</string>
    <string name="accessibility_shortcut_enabling_service">Accessibility Shortcut turned %1$s on</string>
    <string name="accessibility_shortcut_toogle_warning">"When the shortcut is on, pressing both volume buttons for 3 seconds will start an accessibility feature.

 Current accessibility feature:
 %1$s

 You can change the feature in Settings > Accessibility."</string>
    <string name="accessibility_shortcut_warning_dialog_title">Use Accessibility Shortcut?</string>
    <string name="action_bar_home_description">Navigate home</string>
    <string name="action_bar_home_description_format">%1$s, %2$s</string>
    <string name="action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="action_bar_up_description">Navigate up</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="action_mode_done">Done</string>
    <string name="activity_chooser_view_dialog_title_default">Choose activity</string>
    <string name="activity_chooser_view_see_all">See all</string>
    <string name="activity_list_empty">No matching activities found.</string>
    <string name="activity_resolver_use_always">Always</string>
    <string name="activity_resolver_use_once">Just once</string>
    <string name="activity_resolver_work_profiles_support">"%1$s doesn't support work profile"</string>
    <string name="activitychooserview_choose_application">Choose an app</string>
    <string name="activitychooserview_choose_application_error">"Couldn't launch %s"</string>
    <string name="adb_active_notification_message">Tap to turn off USB debugging</string>
    <string name="adb_active_notification_title">USB debugging connected</string>
    <string name="adb_debugging_notification_channel_tv">USB debugging</string>
    <string name="addToDictionary">Add to dictionary</string>
    <string name="add_account_button_label">Add account</string>
    <string name="add_account_label">Add an account</string>
    <string name="add_calendar_event">Schedule</string>
    <string name="add_calendar_event_desc">Schedule event for selected time</string>
    <string name="add_contact">Add</string>
    <string name="add_contact_desc">Add to contacts</string>
    <string name="aerr_application">%1$s has stopped</string>
    <string name="aerr_application_repeated">%1$s keeps stopping</string>
    <string name="aerr_close">Close</string>
    <string name="aerr_close_app">Close app</string>
    <string name="aerr_mute">Mute until device restarts</string>
    <string name="aerr_process">%1$s has stopped</string>
    <string name="aerr_process_repeated">%1$s keeps stopping</string>
    <string name="aerr_report">Send feedback</string>
    <string name="aerr_restart">Open app again</string>
    <string name="aerr_wait">Wait</string>
    <string name="alert_windows_notification_channel_group_name">Display over other apps</string>
    <string name="alert_windows_notification_channel_name">%s displaying over other apps</string>
    <string name="alert_windows_notification_message">If you don’t want %s to use this feature, tap to open settings and turn it off.</string>
    <string name="alert_windows_notification_title">%s is displaying over other apps</string>
    <string name="alert_windows_notification_turn_off_action">Turn off</string>
    <string name="allow">Allow</string>
    <string name="alternate_eri_file">/data/eri.xml</string>
    <string name="alwaysUse">Use by default for this action.</string>
    <string name="android_preparing_apk">Preparing %1$s.</string>
    <string name="android_start_title">Phone is starting…</string>
    <string name="android_system_label">Android System</string>
    <string name="android_upgrading_apk">Optimizing app %1$d of %2$d.</string>
    <string name="android_upgrading_complete">Finishing boot.</string>
    <string name="android_upgrading_fstrim">Optimizing storage.</string>
    <string name="android_upgrading_notification_title">Finishing system update…</string>
    <string name="android_upgrading_starting_apps">Starting apps.</string>
    <string name="android_upgrading_title">Phone is updating…</string>
    <string name="anr_activity_application">"%2$s isn't responding"</string>
    <string name="anr_activity_process">"%1$s isn't responding"</string>
    <string name="anr_application_process">"%1$s isn't responding"</string>
    <string name="anr_process">"Process %1$s isn't responding"</string>
    <string name="anr_title" />
    <string name="app_category_audio">Music &amp; Audio</string>
    <string name="app_category_game">Games</string>
    <string name="app_category_image">Photos &amp; Images</string>
    <string name="app_category_maps">Maps &amp; Navigation</string>
    <string name="app_category_news">News &amp; Magazines</string>
    <string name="app_category_productivity">Productivity</string>
    <string name="app_category_social">Social &amp; Communication</string>
    <string name="app_category_video">Movies &amp; Video</string>
    <string name="app_info">App info</string>
    <string name="app_not_found">No application found to handle this action</string>
    <string name="app_running_notification_text">Tap for more information or to stop the app.</string>
    <string name="app_running_notification_title">%1$s is running</string>
    <string name="app_suspended_default_message">%1$s isn’t available right now. This is managed by %2$s.</string>
    <string name="app_suspended_more_details">Learn more</string>
    <string name="app_suspended_title">App isn’t available</string>
    <string name="app_upgrading_toast">%1$s is upgrading…</string>
    <string name="autofill_address_line_1_label_re">address|adresse|indirizzo|住所|地址</string>
    <string name="autofill_address_line_1_re">address.?line|address1|addr1|street|strasse|straße|hausnummer|housenumber|house.?name|direccion|dirección|adresse|indirizzo|住所1|morada|endereço|Адрес|地址</string>
    <string name="autofill_address_line_2_re">address.?line2|address2|addr2|street|suite|unit|adresszusatz|ergänzende.?angaben|direccion2|colonia|adicional|addresssuppl|complementnom|appartement|indirizzo2|住所2</string>
    <string name="autofill_address_line_3_re">address.?line3|address3|addr3|street|line3|municipio|batiment|residence|indirizzo3</string>
    <string name="autofill_address_name_separator">" "</string>
    <string name="autofill_address_summary_format">$1$2$3</string>
    <string name="autofill_address_summary_name_format">$1$2$3</string>
    <string name="autofill_address_summary_separator">", "</string>
    <string name="autofill_address_type_same_as_re">same as</string>
    <string name="autofill_save_no">No thanks</string>
    <string name="autofill_save_title">Save to &lt;b>%1$s&lt;/b>?</string>
    <string name="autofill_save_yes">Save</string>
    <string name="expand_button_content_description_collapsed">Expand</string>
    <string name="notification_appops_camera_active">Camera</string>
    <string name="notification_appops_microphone_active">Microphone</string>
    <string name="notification_appops_overlay_active">displaying over other apps on your screen</string>
    <string name="notification_header_divider_symbol">•</string>
    <string name="notification_work_profile_content_description">Work profile</string>
    <string name="nubia_switch_notification_tip">Reserve open notification</string>
</resources>