<?xml version="1.0" encoding="utf-8"?>
<NotificationHeaderView android:theme="@style/Theme.Material.Notification" android:orientation="horizontal" android:id="@id/notification_header" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="50.0dip" style="?^attr-private/notificationHeaderStyle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.internal.widget.CachingIconView android:id="@id/icon" android:layout_width="?^attr-private/notificationHeaderIconSize" android:layout_height="?^attr-private/notificationHeaderIconSize" android:layout_marginEnd="@dimen/notification_header_icon_margin_end" />
    <TextView android:textAppearance="@style/TextAppearance.Material.Notification.Primary" android:id="@id/app_name_text" android:visibility="?^attr-private/notificationHeaderAppNameVisibility" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_marginEnd="@dimen/notification_header_separating_margin" />
    <TextView android:textAppearance="@style/TextAppearance.Material.Notification.Secondary" android:id="@id/header_text_secondary_divider" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notification_header_divider_symbol" android:layout_marginEnd="@dimen/notification_header_separating_margin" />
    <TextView android:textAppearance="@style/TextAppearance.Material.Notification.Secondary" android:id="@id/header_text_secondary" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_marginEnd="@dimen/notification_header_separating_margin" />
    <TextView android:textAppearance="@style/TextAppearance.Material.Notification.Secondary" android:id="@id/header_text_divider" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notification_header_divider_symbol" android:layout_marginEnd="@dimen/notification_header_separating_margin" />
    <TextView android:textAppearance="@style/TextAppearance.Material.Notification.Secondary" android:id="@id/header_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_marginEnd="@dimen/notification_header_separating_margin" />
    <TextView android:textAppearance="?^attr-private/notificationHeaderTextAppearance" android:id="@id/time_divider" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notification_header_divider_symbol" android:singleLine="true" android:layout_marginEnd="@dimen/notification_header_separating_margin" />
    <DateTimeView android:textAppearance="@style/TextAppearance.Material.Notification.Time" android:layout_gravity="center" android:id="@id/time" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_marginEnd="@dimen/notification_header_separating_margin" android:showRelative="true" />
    <ViewStub android:id="@id/chronometer" android:visibility="gone" android:layout="@layout/notification_template_part_chronometer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/notification_header_separating_margin" />
    <com.android.internal.widget.NotificationExpandButton android:id="@id/expand_button" android:background="@null" android:paddingTop="@dimen/notification_expand_button_padding_top" android:visibility="gone" android:layout_width="@dimen/notification_header_expand_icon_size" android:layout_height="@dimen/notification_header_expand_icon_size" android:contentDescription="@string/expand_button_content_description_collapsed" android:layout_marginEnd="@dimen/notification_header_separating_margin" />
    <TextView android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/switch_screen_tip" android:background="@drawable/nubia_switch_screen_back" android:paddingLeft="5.0dip" android:paddingTop="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nubia_switch_notification_tip" />
    <ImageView android:layout_gravity="center" android:id="@id/profile_badge" android:paddingTop="1.0dip" android:visibility="gone" android:layout_width="@dimen/notification_badge_size" android:layout_height="@dimen/notification_badge_size" android:scaleType="fitCenter" android:contentDescription="@string/notification_work_profile_content_description" android:layout_marginStart="4.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/app_ops" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginStart="6.0dip">
        <ImageButton android:id="@id/camera" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="?^attr-private/notificationHeaderIconSize" android:layout_height="?^attr-private/notificationHeaderIconSize" android:src="@drawable/ic_camera" android:contentDescription="@string/notification_appops_camera_active" />
        <ImageButton android:id="@id/mic" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="?^attr-private/notificationHeaderIconSize" android:layout_height="?^attr-private/notificationHeaderIconSize" android:src="@drawable/ic_mic" android:contentDescription="@string/notification_appops_microphone_active" android:layout_marginStart="4.0dip" />
        <ImageButton android:id="@id/overlay" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="?^attr-private/notificationHeaderIconSize" android:layout_height="?^attr-private/notificationHeaderIconSize" android:src="@drawable/ic_alert_window_layer" android:contentDescription="@string/notification_appops_overlay_active" android:layout_marginStart="4.0dip" />
    </LinearLayout>
</NotificationHeaderView>